# cloud-autopkg-runner-examples

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  pyproject.toml
.github/workflows/: changed_files.yaml  scheduled_run.yaml
AutoPkg/: recipe_list.json  repo_list.txt
AutoPkg/Overrides/: AWSCLI.munki.recipe  Firefox.munki.recipe.yaml  GoogleChrome.munki.recipe  MSExcel.munki.recipe  MSOneNote.munki.recipe  MSOutlook.munki.recipe  MSPowerPoint.munki.recipe  MSTeams.munki.recipe  MSWord.munki.recipe  TheUnarchiver.munki.recipe
