[project]
name = "cloud-autopkg-runner-examples"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.13",
    "cloud-autopkg-runner>=0.5.3",
]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.37.13",
    "pre-commit>=4.1.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[tool.coverage.report]
fail_under = 80

[tool.coverage.xml]
output = "artifacts/coverage.xml"

[tool.coverage.run]
branch = true
data_file = "artifacts/.coverage"
source = ["src"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
addopts = [
    "--color=yes",
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--junit-xml=artifacts/test_results.xml",
    "--verbosity=1",
]

[tool.ruff]
cache-dir = ".cache/ruff"
include = ["pyproject.toml", "{src,tests}/**/*.py"]
extend-exclude = [".venv"]
select = ["D", "E4", "E7", "E9", "F", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"
